--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "5.2",
     "react-scripts": "^3.0.1",
+    "react-select": "^5.8.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "web-vitals": "^2.1.4"
